--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,3 +5,7 @@ server:
     key-store-type: PKCS12
     key-store-password: 123456
     key-store: keystore.p12
+
+custom:
+  site:
+    baseUrl: https://localhost/login/oauth2/code/kakao
